--- a/style.css
+++ b/style.css
@@ -25,31 +25,21 @@ body {
 }
 
 main {
-    display: grid;
-    grid-template-columns: auto;
     background-color: var(--White);
-    border-radius: 10px;
-    margin: 2rem;
+    border-radius: 20px;
     max-width: 320px;
     box-shadow: 0 0.1 0.8 black;
+    padding: 1rem;
 }
 
 img {
     max-width: 100%;
-    border-radius: 10px;
-    height: auto;
-    width: 100%;
-}
-
-picture {
-    max-width: 100%;
-    padding: 1rem 1rem 0 1rem;
+    border-radius: 20px;
+    margin-bottom: 1rem;
 }
 
 article {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 1rem;
+    padding: 0.63rem
 }
 
 h1 {
@@ -64,4 +54,10 @@ p {
     font-size: 15px;
     font-weight: 400;
     text-align: center;
+}
+
+@media (max-width:375px) {
+    main {
+        margin: 15px;
+    }
 }
